--- a/oclock/products-galery.html
+++ b/oclock/products-galery.html
@@ -22,8 +22,7 @@
             <span class="logo">OCLOCK</span>
             <!-- icons de chart e user -->
             <div class="container-icons">
-                <button class="btn icons icons--user" type="button"><span class="btn-icons--user"><img
-                            src="./assets/user.png" alt="user"></span></button>
+                <button class="btn icons icons--user" type="button"><span class="btn-icons--user"><img src="./assets/user.png" alt="user"></span></button>
                 <button class="btn icons icons--shopbag" type="button"><span class="btn-icons--shopbag"><img src="./assets/shopbag.png" alt="shopbag"></span></button>
             </div>
         </div>
